// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCheckboxGroupMockedCheckbox idToSelectedMap is rendered 1`] = `
<div>
  <eui_checkbox
    checked=""
    class="euiCheckboxGroup__item"
    id="1"
    label="kibana"
  />
  <eui_checkbox
    class="euiCheckboxGroup__item"
    id="2"
    label="elastic"
  />
</div>
`;

exports[`EuiCheckboxGroupMockedCheckbox is rendered 1`] = `
<div
  aria-label="aria-label"
  class="testClass1 testClass2"
  data-test-subj="test subject string"
  id="foobar"
/>
`;

exports[`EuiCheckboxGroupMockedCheckbox options are rendered 1`] = `
<div>
  <eui_checkbox
    class="euiCheckboxGroup__item"
    id="1"
    label="kibana"
  />
  <eui_checkbox
    class="euiCheckboxGroup__item"
    id="2"
    label="elastic"
  />
</div>
`;
